--- a/graphql-spqr-spring-boot-autoconfigure/src/main/resources/playground.html
+++ b/graphql-spqr-spring-boot-autoconfigure/src/main/resources/playground.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset=utf-8/>
     <meta name="viewport" content="user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, minimal-ui">
-    <title>GraphQL Playground</title>
+    <title>${pageTitle}</title>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/graphql-playground-react/build/static/css/index.css" />
     <link rel="shortcut icon" href="//cdn.jsdelivr.net/npm/graphql-playground-react/build/favicon.png" />
     <script src="//cdn.jsdelivr.net/npm/graphql-playground-react/build/static/js/middleware.js"></script>
@@ -51,6 +51,8 @@
 <script>window.addEventListener('load', function (event) {
     GraphQLPlayground.init(document.getElementById('root'), {
         // options as 'endpoint' belong here
+        endpoint: '${graphQLEndpoint}',
+        subscriptionEndpoint: '${webSocketEndpoint}'
     })
 })</script>
 </body>
