--- a/graphql-spqr-spring-boot-autoconfigure/src/main/resources/playground.html
+++ b/graphql-spqr-spring-boot-autoconfigure/src/main/resources/playground.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset=utf-8/>
-    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, minimal-ui">
+    <meta name="viewport"
+          content="user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, minimal-ui">
     <title>${pageTitle}</title>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/graphql-playground-react/build/static/css/index.css" />
     <link rel="shortcut icon" href="//cdn.jsdelivr.net/npm/graphql-playground-react/build/favicon.png" />
