fix playground cannot be used offline #82

--- a/graphql-spqr-spring-boot-autoconfigure/src/main/resources/playground.html
+++ b/graphql-spqr-spring-boot-autoconfigure/src/main/resources/playground.html
@@ -50,7 +50,7 @@
 </div>
 <script>window.addEventListener('load', function (event) {
     GraphQLPlayground.init(document.getElementById('root'), {
-        // options as 'endpoint' belong here
+        /* options as 'endpoint' belong here */
         endpoint: '${graphQLEndpoint}',
         subscriptionEndpoint: '${webSocketEndpoint}'
     })
